Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NOT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID ; declaracoes bloco_simples .
Rule 2     comando_composto -> BEGIN comandos END
Rule 3     comandos -> comandos comando_semi
Rule 4     comandos -> comando_semi
Rule 5     comando_semi -> comando ;
Rule 6     comando_semi -> comando
Rule 7     bloco_simples -> BEGIN comandos END
Rule 8     bloco_simples -> BEGIN declaracoes_variaveis comandos END
Rule 9     declaracoes -> declaracoes_variaveis declaracoes_subprogramas declaracoes_variaveis_opt
Rule 10    declaracoes -> declaracoes_subprogramas declaracoes_variaveis_opt
Rule 11    declaracoes -> declaracoes_variaveis declaracoes_subprogramas
Rule 12    declaracoes -> declaracoes_variaveis
Rule 13    declaracoes -> declaracoes_subprogramas
Rule 14    declaracoes -> empty
Rule 15    declaracoes_variaveis_opt -> declaracoes_variaveis
Rule 16    declaracoes_variaveis_opt -> empty
Rule 17    declaracoes_variaveis -> VAR lista_decl
Rule 18    lista_decl -> lista_decl decl
Rule 19    lista_decl -> decl
Rule 20    decl -> lista_ids : tipo ;
Rule 21    tipo -> TIPOVAR
Rule 22    tipo -> TIPOSTRING
Rule 23    tipo -> ARRAY [ NUMBER DOTDOT NUMBER ] OF TIPOVAR
Rule 24    lista_ids -> identificador
Rule 25    lista_ids -> lista_ids , identificador
Rule 26    identificador -> ID
Rule 27    identificador -> ID [ expressao ]
Rule 28    declaracoes_subprogramas -> lista_subprogramas
Rule 29    lista_subprogramas -> lista_subprogramas subprograma
Rule 30    lista_subprogramas -> subprograma
Rule 31    subprograma -> funcao
Rule 32    subprograma -> procedimento
Rule 33    funcao_header -> FUNCTION ID ( parametros ) : TIPOVAR ;
Rule 34    funcao -> funcao_header bloco_simples
Rule 35    procedimento -> PROCEDURE ID ( parametros ) ; declaracoes_variaveis_opt bloco_simples ;
Rule 36    atribuicao -> ID ASSIGN expressao
Rule 37    parametros -> lista_param
Rule 38    parametros -> empty
Rule 39    lista_param -> lista_param ; param
Rule 40    lista_param -> param
Rule 41    param -> lista_ids : tipo
Rule 42    comando -> atribuicao
Rule 43    comando -> comando_if
Rule 44    comando -> comando_for
Rule 45    comando -> comando_while
Rule 46    comando -> comando_composto
Rule 47    comando -> comando_write
Rule 48    comando -> comando_read
Rule 49    comando -> chamada_funcao
Rule 50    comando_write -> WRITELN ( lista_exp )
Rule 51    comando_read -> READLN ( lista_ids )
Rule 52    comando_if -> IF expressao THEN comando ELSE comando
Rule 53    comando_if -> IF expressao THEN comando
Rule 54    comando_for -> FOR ID ASSIGN expressao TO expressao DO comando
Rule 55    comando_for -> FOR ID ASSIGN expressao DOWNTO expressao DO comando
Rule 56    comando_while -> WHILE expressao DO comando
Rule 57    lista_exp -> expressao
Rule 58    lista_exp -> lista_exp , expressao
Rule 59    argumentos -> lista_exp
Rule 60    argumentos -> empty
Rule 61    expressao -> expressao OR expressao1
Rule 62    expressao -> expressao1
Rule 63    expressao1 -> expressao1 AND expressao2
Rule 64    expressao1 -> expressao2
Rule 65    expressao2 -> ID [ expressao ]
Rule 66    expressao2 -> expressao3 relop expressao3
Rule 67    expressao2 -> expressao3
Rule 68    relop -> EQ
Rule 69    relop -> NEQ
Rule 70    relop -> LT
Rule 71    relop -> LE
Rule 72    relop -> GT
Rule 73    relop -> GE
Rule 74    expressao3 -> expressao3 addop termo
Rule 75    expressao3 -> termo
Rule 76    addop -> +
Rule 77    addop -> -
Rule 78    termo -> termo mulop fator
Rule 79    termo -> fator
Rule 80    mulop -> *
Rule 81    mulop -> /
Rule 82    mulop -> DIV
Rule 83    mulop -> MOD
Rule 84    fator -> NUMBER
Rule 85    fator -> STRING
Rule 86    fator -> TRUE
Rule 87    fator -> FALSE
Rule 88    fator -> ID
Rule 89    fator -> ID [ expressao ]
Rule 90    fator -> ( expressao )
Rule 91    fator -> chamada_funcao
Rule 92    chamada_funcao -> ID ( argumentos )
Rule 93    empty -> <empty>

Terminals, with rules where they appear

(                    : 33 35 50 51 90 92
)                    : 33 35 50 51 90 92
*                    : 80
+                    : 76
,                    : 25 58
-                    : 77
.                    : 1
/                    : 81
:                    : 20 33 41
;                    : 1 5 20 33 35 35 39
AND                  : 63
ARRAY                : 23
ASSIGN               : 36 54 55
BEGIN                : 2 7 8
DIV                  : 82
DO                   : 54 55 56
DOTDOT               : 23
DOWNTO               : 55
ELSE                 : 52
END                  : 2 7 8
EQ                   : 68
FALSE                : 87
FOR                  : 54 55
FUNCTION             : 33
GE                   : 73
GT                   : 72
ID                   : 1 26 27 33 35 36 54 55 65 88 89 92
IF                   : 52 53
LE                   : 71
LT                   : 70
MOD                  : 83
NEQ                  : 69
NOT                  : 
NUMBER               : 23 23 84
OF                   : 23
OR                   : 61
PROCEDURE            : 35
PROGRAM              : 1
READLN               : 51
STRING               : 85
THEN                 : 52 53
TIPOSTRING           : 22
TIPOVAR              : 21 23 33
TO                   : 54
TRUE                 : 86
VAR                  : 17
WHILE                : 56
WRITELN              : 50
[                    : 23 27 65 89
]                    : 23 27 65 89
error                : 

Nonterminals, with rules where they appear

addop                : 74
argumentos           : 92
atribuicao           : 42
bloco_simples        : 1 34 35
chamada_funcao       : 49 91
comando              : 5 6 52 52 53 54 55 56
comando_composto     : 46
comando_for          : 44
comando_if           : 43
comando_read         : 48
comando_semi         : 3 4
comando_while        : 45
comando_write        : 47
comandos             : 2 3 7 8
decl                 : 18 19
declaracoes          : 1
declaracoes_subprogramas : 9 10 11 13
declaracoes_variaveis : 8 9 11 12 15
declaracoes_variaveis_opt : 9 10 35
empty                : 14 16 38 60
expressao            : 27 36 52 53 54 54 55 55 56 57 58 61 65 89 90
expressao1           : 61 62 63
expressao2           : 63 64
expressao3           : 66 66 67 74
fator                : 78 79
funcao               : 31
funcao_header        : 34
identificador        : 24 25
lista_decl           : 17 18
lista_exp            : 50 58 59
lista_ids            : 20 25 41 51
lista_param          : 37 39
lista_subprogramas   : 28 29
mulop                : 78
param                : 39 40
parametros           : 33 35
procedimento         : 32
programa             : 0
relop                : 66
subprograma          : 29 30
termo                : 74 75 78
tipo                 : 20 41

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID ; declaracoes bloco_simples .

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID ; declaracoes bloco_simples .

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . ; declaracoes bloco_simples .

    ;               shift and go to state 4


state 4

    (1) programa -> PROGRAM ID ; . declaracoes bloco_simples .
    (9) declaracoes -> . declaracoes_variaveis declaracoes_subprogramas declaracoes_variaveis_opt
    (10) declaracoes -> . declaracoes_subprogramas declaracoes_variaveis_opt
    (11) declaracoes -> . declaracoes_variaveis declaracoes_subprogramas
    (12) declaracoes -> . declaracoes_variaveis
    (13) declaracoes -> . declaracoes_subprogramas
    (14) declaracoes -> . empty
    (17) declaracoes_variaveis -> . VAR lista_decl
    (28) declaracoes_subprogramas -> . lista_subprogramas
    (93) empty -> .
    (29) lista_subprogramas -> . lista_subprogramas subprograma
    (30) lista_subprogramas -> . subprograma
    (31) subprograma -> . funcao
    (32) subprograma -> . procedimento
    (34) funcao -> . funcao_header bloco_simples
    (35) procedimento -> . PROCEDURE ID ( parametros ) ; declaracoes_variaveis_opt bloco_simples ;
    (33) funcao_header -> . FUNCTION ID ( parametros ) : TIPOVAR ;

    VAR             shift and go to state 9
    BEGIN           reduce using rule 93 (empty -> .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    declaracoes                    shift and go to state 5
    declaracoes_variaveis          shift and go to state 6
    declaracoes_subprogramas       shift and go to state 7
    empty                          shift and go to state 8
    lista_subprogramas             shift and go to state 10
    subprograma                    shift and go to state 11
    funcao                         shift and go to state 12
    procedimento                   shift and go to state 13
    funcao_header                  shift and go to state 14

state 5

    (1) programa -> PROGRAM ID ; declaracoes . bloco_simples .
    (7) bloco_simples -> . BEGIN comandos END
    (8) bloco_simples -> . BEGIN declaracoes_variaveis comandos END

    BEGIN           shift and go to state 18

    bloco_simples                  shift and go to state 17

state 6

    (9) declaracoes -> declaracoes_variaveis . declaracoes_subprogramas declaracoes_variaveis_opt
    (11) declaracoes -> declaracoes_variaveis . declaracoes_subprogramas
    (12) declaracoes -> declaracoes_variaveis .
    (28) declaracoes_subprogramas -> . lista_subprogramas
    (29) lista_subprogramas -> . lista_subprogramas subprograma
    (30) lista_subprogramas -> . subprograma
    (31) subprograma -> . funcao
    (32) subprograma -> . procedimento
    (34) funcao -> . funcao_header bloco_simples
    (35) procedimento -> . PROCEDURE ID ( parametros ) ; declaracoes_variaveis_opt bloco_simples ;
    (33) funcao_header -> . FUNCTION ID ( parametros ) : TIPOVAR ;

    BEGIN           reduce using rule 12 (declaracoes -> declaracoes_variaveis .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    declaracoes_subprogramas       shift and go to state 19
    lista_subprogramas             shift and go to state 10
    subprograma                    shift and go to state 11
    funcao                         shift and go to state 12
    procedimento                   shift and go to state 13
    funcao_header                  shift and go to state 14

state 7

    (10) declaracoes -> declaracoes_subprogramas . declaracoes_variaveis_opt
    (13) declaracoes -> declaracoes_subprogramas .
    (15) declaracoes_variaveis_opt -> . declaracoes_variaveis
    (16) declaracoes_variaveis_opt -> . empty
    (17) declaracoes_variaveis -> . VAR lista_decl
    (93) empty -> .

  ! reduce/reduce conflict for BEGIN resolved using rule 13 (declaracoes -> declaracoes_subprogramas .)
    BEGIN           reduce using rule 13 (declaracoes -> declaracoes_subprogramas .)
    VAR             shift and go to state 9

  ! BEGIN           [ reduce using rule 93 (empty -> .) ]

    declaracoes_variaveis_opt      shift and go to state 20
    declaracoes_variaveis          shift and go to state 21
    empty                          shift and go to state 22

state 8

    (14) declaracoes -> empty .

    BEGIN           reduce using rule 14 (declaracoes -> empty .)


state 9

    (17) declaracoes_variaveis -> VAR . lista_decl
    (18) lista_decl -> . lista_decl decl
    (19) lista_decl -> . decl
    (20) decl -> . lista_ids : tipo ;
    (24) lista_ids -> . identificador
    (25) lista_ids -> . lista_ids , identificador
    (26) identificador -> . ID
    (27) identificador -> . ID [ expressao ]

    ID              shift and go to state 27

    lista_decl                     shift and go to state 23
    decl                           shift and go to state 24
    lista_ids                      shift and go to state 25
    identificador                  shift and go to state 26

state 10

    (28) declaracoes_subprogramas -> lista_subprogramas .
    (29) lista_subprogramas -> lista_subprogramas . subprograma
    (31) subprograma -> . funcao
    (32) subprograma -> . procedimento
    (34) funcao -> . funcao_header bloco_simples
    (35) procedimento -> . PROCEDURE ID ( parametros ) ; declaracoes_variaveis_opt bloco_simples ;
    (33) funcao_header -> . FUNCTION ID ( parametros ) : TIPOVAR ;

    VAR             reduce using rule 28 (declaracoes_subprogramas -> lista_subprogramas .)
    BEGIN           reduce using rule 28 (declaracoes_subprogramas -> lista_subprogramas .)
    PROCEDURE       shift and go to state 15
    FUNCTION        shift and go to state 16

    subprograma                    shift and go to state 28
    funcao                         shift and go to state 12
    procedimento                   shift and go to state 13
    funcao_header                  shift and go to state 14

state 11

    (30) lista_subprogramas -> subprograma .

    PROCEDURE       reduce using rule 30 (lista_subprogramas -> subprograma .)
    FUNCTION        reduce using rule 30 (lista_subprogramas -> subprograma .)
    VAR             reduce using rule 30 (lista_subprogramas -> subprograma .)
    BEGIN           reduce using rule 30 (lista_subprogramas -> subprograma .)


state 12

    (31) subprograma -> funcao .

    PROCEDURE       reduce using rule 31 (subprograma -> funcao .)
    FUNCTION        reduce using rule 31 (subprograma -> funcao .)
    VAR             reduce using rule 31 (subprograma -> funcao .)
    BEGIN           reduce using rule 31 (subprograma -> funcao .)


state 13

    (32) subprograma -> procedimento .

    PROCEDURE       reduce using rule 32 (subprograma -> procedimento .)
    FUNCTION        reduce using rule 32 (subprograma -> procedimento .)
    VAR             reduce using rule 32 (subprograma -> procedimento .)
    BEGIN           reduce using rule 32 (subprograma -> procedimento .)


state 14

    (34) funcao -> funcao_header . bloco_simples
    (7) bloco_simples -> . BEGIN comandos END
    (8) bloco_simples -> . BEGIN declaracoes_variaveis comandos END

    BEGIN           shift and go to state 18

    bloco_simples                  shift and go to state 29

state 15

    (35) procedimento -> PROCEDURE . ID ( parametros ) ; declaracoes_variaveis_opt bloco_simples ;

    ID              shift and go to state 30


state 16

    (33) funcao_header -> FUNCTION . ID ( parametros ) : TIPOVAR ;

    ID              shift and go to state 31


state 17

    (1) programa -> PROGRAM ID ; declaracoes bloco_simples . .

    .               shift and go to state 32


state 18

    (7) bloco_simples -> BEGIN . comandos END
    (8) bloco_simples -> BEGIN . declaracoes_variaveis comandos END
    (3) comandos -> . comandos comando_semi
    (4) comandos -> . comando_semi
    (17) declaracoes_variaveis -> . VAR lista_decl
    (5) comando_semi -> . comando ;
    (6) comando_semi -> . comando
    (42) comando -> . atribuicao
    (43) comando -> . comando_if
    (44) comando -> . comando_for
    (45) comando -> . comando_while
    (46) comando -> . comando_composto
    (47) comando -> . comando_write
    (48) comando -> . comando_read
    (49) comando -> . chamada_funcao
    (36) atribuicao -> . ID ASSIGN expressao
    (52) comando_if -> . IF expressao THEN comando ELSE comando
    (53) comando_if -> . IF expressao THEN comando
    (54) comando_for -> . FOR ID ASSIGN expressao TO expressao DO comando
    (55) comando_for -> . FOR ID ASSIGN expressao DOWNTO expressao DO comando
    (56) comando_while -> . WHILE expressao DO comando
    (2) comando_composto -> . BEGIN comandos END
    (50) comando_write -> . WRITELN ( lista_exp )
    (51) comando_read -> . READLN ( lista_ids )
    (92) chamada_funcao -> . ID ( argumentos )

    VAR             shift and go to state 9
    ID              shift and go to state 46
    IF              shift and go to state 47
    FOR             shift and go to state 48
    WHILE           shift and go to state 49
    BEGIN           shift and go to state 33
    WRITELN         shift and go to state 50
    READLN          shift and go to state 51

    comandos                       shift and go to state 34
    declaracoes_variaveis          shift and go to state 35
    comando_semi                   shift and go to state 36
    comando                        shift and go to state 37
    atribuicao                     shift and go to state 38
    comando_if                     shift and go to state 39
    comando_for                    shift and go to state 40
    comando_while                  shift and go to state 41
    comando_composto               shift and go to state 42
    comando_write                  shift and go to state 43
    comando_read                   shift and go to state 44
    chamada_funcao                 shift and go to state 45

state 19

    (9) declaracoes -> declaracoes_variaveis declaracoes_subprogramas . declaracoes_variaveis_opt
    (11) declaracoes -> declaracoes_variaveis declaracoes_subprogramas .
    (15) declaracoes_variaveis_opt -> . declaracoes_variaveis
    (16) declaracoes_variaveis_opt -> . empty
    (17) declaracoes_variaveis -> . VAR lista_decl
    (93) empty -> .

  ! reduce/reduce conflict for BEGIN resolved using rule 11 (declaracoes -> declaracoes_variaveis declaracoes_subprogramas .)
    BEGIN           reduce using rule 11 (declaracoes -> declaracoes_variaveis declaracoes_subprogramas .)
    VAR             shift and go to state 9

  ! BEGIN           [ reduce using rule 93 (empty -> .) ]

    declaracoes_variaveis          shift and go to state 21
    declaracoes_variaveis_opt      shift and go to state 52
    empty                          shift and go to state 22

state 20

    (10) declaracoes -> declaracoes_subprogramas declaracoes_variaveis_opt .

    BEGIN           reduce using rule 10 (declaracoes -> declaracoes_subprogramas declaracoes_variaveis_opt .)


state 21

    (15) declaracoes_variaveis_opt -> declaracoes_variaveis .

    BEGIN           reduce using rule 15 (declaracoes_variaveis_opt -> declaracoes_variaveis .)


state 22

    (16) declaracoes_variaveis_opt -> empty .

    BEGIN           reduce using rule 16 (declaracoes_variaveis_opt -> empty .)


state 23

    (17) declaracoes_variaveis -> VAR lista_decl .
    (18) lista_decl -> lista_decl . decl
    (20) decl -> . lista_ids : tipo ;
    (24) lista_ids -> . identificador
    (25) lista_ids -> . lista_ids , identificador
    (26) identificador -> . ID
    (27) identificador -> . ID [ expressao ]

  ! shift/reduce conflict for ID resolved as shift
    PROCEDURE       reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    FUNCTION        reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    BEGIN           reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    IF              reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    FOR             reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    WHILE           reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    WRITELN         reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    READLN          reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .)
    ID              shift and go to state 27

  ! ID              [ reduce using rule 17 (declaracoes_variaveis -> VAR lista_decl .) ]

    decl                           shift and go to state 53
    lista_ids                      shift and go to state 25
    identificador                  shift and go to state 26

state 24

    (19) lista_decl -> decl .

    ID              reduce using rule 19 (lista_decl -> decl .)
    PROCEDURE       reduce using rule 19 (lista_decl -> decl .)
    FUNCTION        reduce using rule 19 (lista_decl -> decl .)
    BEGIN           reduce using rule 19 (lista_decl -> decl .)
    IF              reduce using rule 19 (lista_decl -> decl .)
    FOR             reduce using rule 19 (lista_decl -> decl .)
    WHILE           reduce using rule 19 (lista_decl -> decl .)
    WRITELN         reduce using rule 19 (lista_decl -> decl .)
    READLN          reduce using rule 19 (lista_decl -> decl .)


state 25

    (20) decl -> lista_ids . : tipo ;
    (25) lista_ids -> lista_ids . , identificador

    :               shift and go to state 54
    ,               shift and go to state 55


state 26

    (24) lista_ids -> identificador .

    :               reduce using rule 24 (lista_ids -> identificador .)
    ,               reduce using rule 24 (lista_ids -> identificador .)
    )               reduce using rule 24 (lista_ids -> identificador .)


state 27

    (26) identificador -> ID .
    (27) identificador -> ID . [ expressao ]
